<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <View
        android:id="@+id/endview"
        android:layout_width="257dp"
        android:layout_height="278dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreTxt"
        android:layout_width="103dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/endview" />

    <Button
        android:id="@+id/playAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/playagain"
        app:layout_constraintEnd_toStartOf="@+id/exitGame"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endview" />

    <Button
        android:id="@+id/exitGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/exitgame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playAgain"
        app:layout_constraintTop_toBottomOf="@+id/endview" />

    <Button
        android:id="@+id/credits"
        android:layout_width="92dp"
        android:layout_height="36dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="48dp"
        android:text="@string/credits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playAgain" />

    <Button
        android:id="@+id/scam"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/credits"
        app:layout_constraintTop_toBottomOf="@+id/exitGame" />

    <TextView
        android:id="@+id/highscoreTxt"
        android:layout_width="136dp"
        android:layout_height="25dp"
        android:layout_marginTop="72dp"
        android:text="@string/highscore"
        app:layout_constraintEnd_toEndOf="@+id/endview"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toStartOf="@+id/endview"
        app:layout_constraintTop_toBottomOf="@+id/scoreTxt" />

    <TextView
        android:id="@+id/actualscoreTxt"
        android:layout_width="62dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/endview"
        app:layout_constraintStart_toStartOf="@+id/endview"
        app:layout_constraintTop_toBottomOf="@+id/scoreTxt" />

    <TextView
        android:id="@+id/actualhighscoreTxt"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/endview"
        app:layout_constraintStart_toStartOf="@+id/endview"
        app:layout_constraintTop_toBottomOf="@+id/highscoreTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>